@@ -4,7 +4,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Find banner images recursively.
+  [mathias.leimgruber]
 
 
 1.0 (2013-04-17)
